test/fixtures/public/analysis/fail/var_declaration_imported_method.jmm
import Parent;

class Child extends Parent {
    public static void main(String[] args) {
        String c;
        c = File.read(file);
    }

}